# ims_automation

./: .env.example  .gitignore  DEPLOY_CPANEL.md  README.md  RENEWAL_INTEGRATION_PROMPT.md  cron_customer_sync.sh  cron_run.sh  debug_concurrent.py  passenger_wsgi.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_fetcher.sh  setup_cpanel.sh  sync_customers.py  sync_renewals.py
renewal_system/: __init__.py  app.py  config.py
renewal_system/api/: __init__.py  customers.py  routes.py  views.py  webhook.py
renewal_system/models/: __init__.py  database.py
renewal_system/services/: __init__.py  classifier.py  operator_log.py  renewal_sync.py  whatsapp.py
renewal_system/templates/: dashboard.html
renewal_system/utils/: __init__.py
src/: __init__.py  auth.py  config_loader.py  customer_fetcher.py  customer_repository.py  data_exporter.py  data_parser.py  database.py  date_parser.py  diagnostics.py  login_handler.py  main.py  navigator.py  renewal_api.py  renewal_fetcher.py  session_manager.py
tests/integration/: test_fetch_flow.py  test_login_flow.py  test_mysql_export.py
tests/property/: test_config_properties.py  test_data_exporter_properties.py  test_data_parser_properties.py  test_date_parser_properties.py  test_diagnostics_properties.py  test_login_handler_properties.py  test_renewal_api_properties.py  test_session_manager_properties.py
tests/unit/: test_config_loader.py  test_data_exporter.py  test_data_parser.py  test_date_parser.py  test_diagnostics.py  test_login_handler.py  test_main.py  test_renewal_api.py  (+1 more)
(+6 files in other folders)
